--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@google/generative-ai": "^0.2.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.7",
     "isomorphic-fetch": "^3.0.0",
